ajout des wrapicons du footer, ainsi que quelque correction

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,8 @@
   padding: 0;
   text-decoration: none;
   box-sizing: border-box;
-  font-family: 'Roboto',  sans-serif; }
+  font-family: 'Roboto',  sans-serif;
+  letter-spacing: 0.7px; }
 
 h1 {
   font-family: 'Shrikhand', cursive; }
@@ -90,6 +91,26 @@ h1 {
       padding-top: 10px;
       color: white;
       text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000; }
+
+.footer {
+  background-color: #353535;
+  color: white; }
+  .footer__logo {
+    font-size: 0.8rem;
+    padding: 25px; }
+
+.footerInfos {
+  display: flex;
+  flex-direction: column;
+  padding: 0 0 35px 25px; }
+  .footerInfos__info {
+    margin-bottom: 10px; }
+  .footerInfos__info a {
+    color: white;
+    margin-left: 10px; }
+  .footerInfos a {
+    margin-bottom: 10px;
+    color: white; }
 
 .headerHome {
   display: flex;
