--- a/sass/base/_styleForBase.scss
+++ b/sass/base/_styleForBase.scss
@@ -4,6 +4,7 @@
     text-decoration: none;
     box-sizing: border-box;
     font-family: 'Roboto',  sans-serif;
+    letter-spacing: 0.7px;
 }
 
 h1 {
